--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>I'm a passionate Full-Stack Developer with over 2 years of experience building scalable web applications using JavaScript, React, Java, and Spring Boot. I enjoy solving real-world problems, translating business requirements into technical solutions, and continuously improving my technical and soft skills. My goal is to contribute to impactful projects and grow into a technical leadership role.</p>
+            <a href="#contact">GetInTouch</a>
         </section>
         <section id="skills">
             <h2>Skills</h2>
@@ -163,16 +164,14 @@
                 <p><strong>Description</strong>: A full-stack travel platform connecting users with destinations based on desired emotional experiences, leveraging AI for personalized travel plans.</p>
                 <p><strong>Features</strong>: Integrated OpenAI API for tailored itineraries, Google Maps API for destinations and routes, secure authentication with OAuth2.0 (Google, Facebook, GitHub) using Spring Security and JWT, RESTful APIs with CRUD operations.</p>
                 <p><strong>Tech Stack</strong>: Java, Spring Boot, JavaScript, React, TailwindCSS, MySQL, OpenAI API, Google Maps API, OAuth2.0, Spring Security, JWT</p>
-                <p><strong>GitHub</strong>: <a href="https://github.com/aishdande9/travel-vibes">Repository</a> (Update with actual link)</p>
-                <p><strong>Demo</strong>: <a href="https://travel-vibes-demo.example.com">Live Demo</a> (Update with actual link)</p>
+                <p><strong>GitHub</strong>: <a href="https://github.com/aishdande9/travel-vibes">Repository</a>https://github.com/aishdande9/the-bugfest-club.git</p>
             </div>
             <div class="project">
                 <h3>🎬 React Movie Search App - Independent Project</h3>
                 <p><strong>Description</strong>: A dynamic movie search application built with React, fetching data from the Movie Database API.</p>
                 <p><strong>Features</strong>: Responsive UI with React components, search by title/genre/year with real-time results, state management with React Hooks.</p>
                 <p><strong>Tech Stack</strong>: JavaScript, React, React Hooks, Axios, CSS/Styled Components, React Router, Movie Database API</p>
-                <p><strong>GitHub</strong>: <a href="https://github.com/aishdande9/react-movie-app">Repository</a> (Update with actual link)</p>
-                <p><strong>Demo</strong>: <a href="https://react-movie-app-demo.example.com">Live Demo</a> (Update with actual link)</p>
+                <p><strong>GitHub</strong>: <a href="https://github.com/aishdande9/react-movie-app">Repository</a>https://github.com/aishdande9/cinema-hub-react.git</p>
             </div>
         </section>
         <section id="experience">
@@ -198,7 +197,7 @@
             <p>
                 <a href="https://www.linkedin.com/in/aishwarya-dande-ba7314336/">LinkedIn</a> |
                 <a href="https://www.github.com/aishdande9">GitHub</a> |
-                <a href="mailto:contact@aishwaryadande.com">Email</a> (Update with actual email)
+                <a href="mailto:aish.dande@gmail.com">Email</a> (Update with actual email)
             </p>
         </section>
     </div>
